# Email_Task_Agent

./: .gitignore  ARCHITECTURE.md  DEMO.md  Dockerfile  LICENSE  MCP_SETUP.md  README.md  SKILL.md  briefing.py  extraction.py  gmail_client.py  main.py  pyproject.toml  requirements.txt  task_store.py  test_extraction.py  test_prioritization.py  vip_senders.yaml
fixtures/: sample_emails.json
mnt/user-data/outputs/bharat-email-agent/skills/email-triage/: SKILL.md
src/agents/: extraction.py  prioritization.py
src/models/: task.py
src/utils/: prompts.py
